gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-adt_const_params.rs
struct Foo<const NAME: &'static str>; // { dg-error "" "" { target *-*-* } }
fn main() {}

